# SS_TC_BS

./: .gitattributes  README.md  Unified Model Inference.ipynb  deeplabv3pMS.py  utilities.py
Semantic_model_weights/: Smaller_MS_model_final.h5
Temporal_model_weights/: 3_temporal_model_fall.h5
calculate_ss_logits_for_cdnet/.ipynb_checkpoints/: DeepLab_Demo_cdnet_model-checkpoint.ipynb  calculate_ss_logits_for_cdnet-checkpoint.ipynb
deeplab_demo_cdnet/: README.md
deeplab_demo_cdnet/.ipynb_checkpoints/: DeepLab_Demo_cdnet_model-checkpoint.ipynb
deeplab_demo_cdnet/Models/: frozen_inference_graph.pd
evaluate_AFH_SS/: AFH_SS_bin_score_dict.npy  AFH_SS_post_bin_score_dict.npy  AFH_SS_raw_score_dict.npy  Probability_only_bin_score_dict.npy  Probability_only_raw_score_dict.npy  SS_only_bin_score_dict.npy  SS_only_raw_score_dict.npy  scores.ipynb
evaluate_AFH_SS/.ipynb_checkpoints/: plot-checkpoint.ipynb  scores-Copy1-checkpoint.ipynb  scores-MOD-checkpoint.ipynb  scores-raw-only-checkpoint.ipynb
evaluate_AFH_SS/AFH_SS/: AFH.cpp  AFH.h  BACKSUB.cpp  BACKSUB.h  CMakeLists.txt  CommonLibs.h  Functions.cpp  Functions.h  main.cpp
evaluate_SWCD_SS/: SSA_bin_score_dict.npy  raw_bin_score_dict.npy  scores.ipynb
evaluate_SWCD_SS/SWCD_SS/: BACKSUB.cpp  BACKSUB.h  CMakeLists.txt  CommonLibs.h  Functions.cpp  Functions.h  main.cpp
train_top_model/: Build the training dataset.ipynb
train_top_model/.ipynb_checkpoints/: Build the training dataset-checkpoint.ipynb  train_top_model-checkpoint.ipynb
train_top_model/File_lists/: logits_files_list_for_training_top_model.npy  mask_file_list_for_training_top_model.npy  probability_file_list_for_training_top_model.npy
train_top_model/Logs/: model.ckpt.data-00000-of-00001  model.ckpt.index
